--- a/style/style.css
+++ b/style/style.css
@@ -109,7 +109,7 @@ h2 {
   padding: 0 !important;
   text-align: left;
   color: #fff;
-  background-image: url("file:///C:/wamp64/www/WEB_DEV/canvart-bootstrap/assets/beach_chairs_hero_1895x1000.png");
+  background-image: url("https://yves91.github.io/canvart/assets/beach_chairs_hero_1895x1000.png");
   height: 450px;
   /*background-position: center;*/
   background-repeat: no-repeat;
